# airflow-jaffle-shop

./: .example-env  main.py  pyproject.toml  requirements.txt
dags/: raw_dag.py
